--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,7 +1,7 @@
 .contact-input-container input {
     border: 0px;
     border-bottom: 1px solid grey;
-    padding: 6px 10px;
+    padding: 6px 5px;
     font-size: 16px;
     font-family: Roboto;
     margin: 10px;
@@ -30,4 +30,5 @@
     margin-top:100px;
     margin-left:100px;
     font-family: Roboto;
+    font-weight:400;
 }
