--- a/styles/budget.css
+++ b/styles/budget.css
@@ -17,7 +17,7 @@
     font-size:36px;
     font-family:Roboto;
     color: rgba(74,74,74,1);
-    font-weight:500;
+    font-weight:400;
 }
 
 #budget-content {
@@ -27,6 +27,7 @@
     font-size: 28px;
     font-family:Roboto;
     color: rgba(74,74,74,1);
+    font-weight:300;
     
 }
 
@@ -42,7 +43,7 @@
 }
 .projects-link-container{
     margin-left: 617px;
-    margin-top: 350px;
+    margin-top: 250px;
     float:inherit;
     font-family: Roboto;
     font-size: 28px;
@@ -51,3 +52,23 @@
     cursor: pointer;
     
 }
+
+.CTA-button3{
+    display:inline-block;
+    background: #FFFFFF;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 22px;
+    border:1px solid #4A4A4A;
+    border-radius: 4px;
+    font-family: Roboto;
+    font-weight: 500;
+    color: #4A4A4A;
+    margin-top:30px;
+    margin-left:165px;
+    text-decoration: none;
+}
+
+   
