--- a/styles/gurbani.css
+++ b/styles/gurbani.css
@@ -18,7 +18,7 @@
     font-size:36px;
     font-family:Roboto;
     color:white;
-    font-weight:500;
+    font-weight:400;
 }
 
 #gurbani-content {
@@ -28,6 +28,7 @@
     font-size: 28px;
     font-family:Roboto;
     color: white;
+    font-weight:300;
     
 }
 
@@ -40,4 +41,22 @@
 
     float: right;
     margin-right: 50px;
+}
+
+.CTA-button2{
+    display:inline-block;
+    background: #FFFFFF;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 22px;
+    border:1px solid #0077C7;
+    border-radius: 4px;
+    font-family: Roboto;
+    font-weight: 500;
+    color: #0077C7;
+    margin-top:30px;
+    margin-left:150px;
+    text-decoration: none;
 }
